# 3-DIM-Motion-Platform-ESP32

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.cpp
main/OS/monitor/: PerfMonitor.cpp  PerfMonitor.hpp
main/OS/task/: Task.cpp  Task.hpp
main/OS/time/: delay.cpp  delay.h
main/bluetooth/: Bleprph_Init.h  gatt_server.cpp
main/bluetooth/services/: devInfo.h  remoteControll.h  remoteInfo.h
main/controller/PID/: PIDController.cpp  PIDController.h
main/controller/command/: CommandManager.cpp  CommandManager.h
main/controller/core/: WriterBot.cpp  WriterBot.h
main/controller/powerManager/: powerManager.cpp  powerManager.h
main/global/: global.cpp  global.h
main/peripherals/device/LED/: LED.cpp  LED.h
main/peripherals/device/MT6701/: MT6701.cpp  MT6701.h
main/peripherals/device/VL5310X/: VL53L0X.cpp  VL53L0X.h  VL53L0X_IMPL.cpp  VL53L0X_IMPL.h
main/peripherals/device/linearSlider/: LinearSlider.cpp  LinearSlider.h
main/peripherals/device/motors/: DCSteppingMotor.cpp  DCSteppingMotor.h  SimpleDCMotor.cpp  SimpleDCMotor.h
main/peripherals/device/motors/servo/: MG995.cpp  MG995.h
main/peripherals/interface/ADC/: ADC.cpp  ADC.h
main/peripherals/interface/GPIO/: GPIO.cpp  GPIO.h
main/peripherals/interface/I2C/: I2C.cpp  I2C.h
main/peripherals/interface/PWM/: PWM.cpp  PWM.h
main/peripherals/interface/SPI/: SPI.cpp  SPI.hpp
main/storage/: NVSStorage.cpp  NVSStorage.h
main/utils/log/: Logger.cpp  Logger.h
main/utils/math/: Angle.cpp  Angle.h  MathHelper.cpp  MathHelper.h
main/utils/types/: F1D.h
(+4 files in other folders)
